--- a/samples/DynamicTable.Wasm/wwwroot/index.html
+++ b/samples/DynamicTable.Wasm/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="DynamicTable.Wasm.styles.css" rel="stylesheet" />
+    <link href="_content/dynamicTable/DynamicTable.bundle.scp.css" rel="stylesheet" >
 </head>
 
 <body>
